created model, view, and template for users on app two, populated db

--- a/templates/first_app/index.html
+++ b/templates/first_app/index.html
@@ -4,11 +4,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Pikachu page</title>
-    <link rel="stylesheet" href={% static "css/mycss.css" %}>
+    <title>Django Level Two</title>
+    <link rel="stylesheet" href="{% static "css/mycss.css"%}"
   </head>
   <body>
-    <h1>Hey, this is a picture of pikachu himself</h1>
-    <img src={% static "images/pikachu.jpeg" %} >
+    <h1>Hi, welcome to django level 2</h1>
+    <h2>Here are your access records</h2>
+
+    <div class="djangtwo">
+      {% if access_records %}
+        <table>
+          <th>Site Name</th>
+          <th>Date Accessed</th>
+          {% for acc in access_records %}
+            <tr>
+              <td>{{ acc.name }}</td>
+              <td>{{ acc.date }}</td>
+            </tr>
+          {% endfor %}
+        </table>
+        {% else %}
+          <p>No access record found</p>
+        {% endif %}
+    </div>
+
   </body>
 </html>
